# Sao-Paulo--Alberta-Brain-hack-II--Multimodal-Medical-Imaging-Analysis

./: .gitignore  README.md  baseline(4).ipynb  baseline_fusion_model.ipynb  baseline_fusion_model.py  check_result.py  data_loader.py  load_config.py  pyproject.toml  requirements.txt  swinunetrti.py  test.py  train_function.py  train_image_only.py  transforms_function.py
configs/: README.md  debug_config.yaml  swinunetrti.yaml
output/: README.md
